fix popup content scrollbar

--- a/Resources/public/css/c4g-maps-general.css
+++ b/Resources/public/css/c4g-maps-general.css
@@ -449,7 +449,7 @@ button.ol-zoom-position:before{
 }
 .c4g-popup-wrapper .c4g-popup-close {
   position: absolute;
-  right: 10px;
+  right: 24px;
   top: 10px;
 }
 .c4g-popup-wrapper .c4g-popup-content {
