--- a/Resources/public/css/themes/colors/c4g-theme-colors.css
+++ b/Resources/public/css/themes/colors/c4g-theme-colors.css
@@ -472,19 +472,22 @@ button.c4g-popup-close:hover {
 
 .c4g-control-container-top-left::-webkit-scrollbar-track,
 .c4g-starboard-content-container::-webkit-scrollbar-track,
-.c4g-portside-content-container::-webkit-scrollbar-track {
+.c4g-portside-content-container::-webkit-scrollbar-track,
+.c4g-popup-wrapper .c4g-popup-content::-webkit-scrollbar-track {
   background-color: rgba(255,255,255,.9);
   background-color: var(--font-color);
 }
 .c4g-control-container-top-left::-webkit-scrollbar-thumb,
 .c4g-starboard-content-container::-webkit-scrollbar-thumb,
-.c4g-portside-content-container::-webkit-scrollbar-thumb {
+.c4g-portside-content-container::-webkit-scrollbar-thumb,
+.c4g-popup-wrapper .c4g-popup-content::-webkit-scrollbar-thumb {
   background-color: rgba(0,155,222,.5);
   background-color: var(--shadow-color);
 }
 .c4g-control-container-top-left::-webkit-scrollbar-thumb:hover,
 .c4g-starboard-content-container::-webkit-scrollbar-thumb:hover,
-.c4g-portside-content-container::-webkit-scrollbar-thumb:hover {
+.c4g-portside-content-container::-webkit-scrollbar-thumb:hover,
+.c4g-popup-wrapper .c4g-popup-content::-webkit-scrollbar-thumb:hover {
   background-color: rgba(0,155,222,.5);
   background-color: var(--shadow-color);
 }
